--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "node-sass": "^3.13.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-router": "^3.0.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "vue": "^2.1.3",
