--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "lizongqing",
   "license": "ISC",
   "dependencies": {
+    "antd": "^2.6.4",
+    "bundle-loader": "^0.5.4",
     "less-loader": "^2.2.3",
     "vue": "^2.0.8",
     "vue-resource": "^1.0.3",
@@ -44,6 +46,7 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0",
+    "redux": "^3.6.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "vue": "^2.1.3",
